Complete skin drawing methods

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <meta property="twitter:site" content="@AntlerPig"> -->
     </head>
     <body>
+        <div class="central">
+            <div id="game_area"></div>
+        </div>
         <script type="module" src="giad2019.js"></script>
     </body>
 </html>
